shehbang compiled later into js file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typescript-atm",
-  "version": "1.0.0",
+  "name": "zari-typescript-atm",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
